--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.wrapper {
+  width: 90%;
+  max-width: 1720px;
+  margin: 1rem auto;
+  padding: 1.75rem;
+  border-radius: 5px;
+  box-shadow: 0 5px 20px 0px #00000050;
+}
+
+.wrapper form {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
+  margin-bottom: 1rem;
+}
+
+.control :is(input, select) {
+  display: block;
+  width: 100%;
+}
+
+.control label {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+:is(input, select) {
+  padding: 0.5rem 1rem;
+}
+
+input[type="submit"] {
+  cursor: pointer;
+}
+
+.result-from,
+.result-to {
+  color: #333;
+  font-weight: bold;
+}
+
+.result-to {
+  font-size: 1.7rem;
+}
+
+@media (max-width: 550px) {
+  .wrapper form {
+    grid-template-columns: 1fr;
+  }
 }
