--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: rgba(46, 46, 236, 0.863);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -39,15 +43,34 @@ code {
 
 .control label {
   display: block;
+  font-weight: bold;
   margin-bottom: 0.5rem;
 }
 
 :is(input, select) {
   padding: 0.5rem 1rem;
+  border: 1px solid #00000025;
+  border-radius: 4px;
+  outline-color: var(--primary-color);
 }
 
-input[type="submit"] {
+.btn {
   cursor: pointer;
+  font-weight: bold;
+  border: none;
+  border-radius: 4px;
+  padding: 0.5rem 1rem;
+}
+
+.btn--primary {
+  color: #fff;
+  background-color: var(--primary-color);
+}
+
+.btn--outline-primary {
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+  background-color: #fff;
 }
 
 .result-from,
